objects/voice_connector__VCCTISettings__mdt.object
<CustomObject>
    <fields>
        <fullName>voice_connector__VCActivationsFirstDate__c</fullName>
        <label>Activations First Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCAllowMultipleCalls__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Multiple Calls When GettingMedia</description>
        <inlineHelpText>Allow Multiple Calls When Getting Media</inlineHelpText>
        <label>AllowMultipleCalls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCAlwaysCallCTIOnRecrawl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always Call CTI On Recrawl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCTICaptureAutoRecording__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capture Auto Recording</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCTICreateDynamicRemoteSite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateDynamicRemoteSite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCTIDevName__c</fullName>
        <label>CTI Dev Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCTIIsScheduleable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VCCTIIsScheduleable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCTIName__c</fullName>
        <label>CTI Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCTIRenewalSubscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked if is necessary renewal subscription Webhook</description>
        <label>Renewal Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCTIRequestNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCTIRequiredSubscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VCCTIRequiredSubscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCTIVerificationToken__c</fullName>
        <description>Token for add an extra security layer between the CTI and the Public Endpoint</description>
        <label>VCCTIVerificationToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCallCoachingMediaProviderId__c</fullName>
        <label>Call Coaching Media Provider Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCClientConsent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Client consent for using the CTI information</description>
        <label>Client Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCDelay__c</fullName>
        <label>Delay milliseconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCDescription__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCDocNamedCredential__c</fullName>
        <label>VC Doc Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCDocumentUrl__c</fullName>
        <description>This Field is used to set document url on LWC</description>
        <label>Document Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCFilter__c</fullName>
        <description>This field is used to set filter params to get vccall List</description>
        <label>Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCGetCallEndpointWithParam__c</fullName>
        <label>Get Call Endpoint With Param</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCGetCallsEndpoint__c</fullName>
        <label>Get Calls Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCGetMediaEndpoint__c</fullName>
        <label>Get Media Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCInDevelop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Develop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCIntegrationUserId__c</fullName>
        <label>Integration User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCMaxCallVolumeWhenRecrawling__c</fullName>
        <label>Max Call Volume When Recrawling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCMaxDateRangeWhenRecrawlingByUser__c</fullName>
        <label>Max Date Range When Recrawling By User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCMinCallDuration__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Min Call Duration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCMustSavePhoneNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Must Save Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCNamedCredentials__c</fullName>
        <label>Named Credentials</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCPhoneNumber__c</fullName>
        <label>Account Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCSubscriptionExpiration__c</fullName>
        <label>Subscription Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCSubscriptionId__c</fullName>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCTargetId__c</fullName>
        <label>Target Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCTargetType__c</fullName>
        <label>Target Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCUrlExpirationTime__c</fullName>
        <description>This field indicates the expiration of the recording URL in minutes.</description>
        <label>Url Expiration Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCWebhookId__c</fullName>
        <label>Webhook Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>VCCTISettings</label>
    <pluralLabel>VCCTISettings</pluralLabel>
</CustomObject>